<resources>
    <string name="app_name">Youtube</string>
    <string name="description_logo">Logomarca youtube</string>
    <string name="description_search">Botão pesquisar videos</string>
    <string name="description_notification">Icone de notificações</string>
    <string name="description_toolbar">Barra de ferramentas</string>
    <string name="description_layout_toolbar">Layout com barra de ferramentas</string>
    <string name="description_user">Icone perfil do usuário</string>
    <string name="description_sharedStream">Icone compartilhar stream, com equipamentos compativel. Ex: Smart TV</string>
    <string name="menu_title_shared">Espelhar</string>
    <string name="menu_title_notificar">Notificação</string>
    <string name="menu_title_perfil">Perfil</string>
    <string name="menu_title_pesquisar">Pesquisar</string>
    <string name="bootomsheet_save">Save to Watch later</string>
    <string name="bootomsheet_save_playlist">Save to playlist</string>
    <string name="bootomsheet_shared">Shared</string>
    <string name="bootomsheet_not_interested">Not interested</string>
    <string name="bootomsheet_dont_recommend_channel">Don´t recommend channel</string>
    <string name="bootomsheet_report">Report</string>
</resources>