<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layoutDescription="@string/description_search"
    >
<Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorCinzaMedio"
    android:padding="5dp"
    android:contentDescription="@string/description_toolbar"
    android:title=" ">

     <ImageView
         android:id="@+id/logo"
         android:layout_width="100dp"
         android:layout_height="@dimen/dimen_twenty"
         android:src="@drawable/logo"
         android:layout_gravity="left"
         android:contentDescription="@string/description_logo"/>


     <ImageButton
         android:id="@+id/user"
         android:layout_width="@dimen/dimen_twenty"
         android:layout_height="@dimen/dimen_twenty"
         android:src="@drawable/user"
         android:layout_gravity="right"
         android:scaleType="centerInside"
         android:background="@color/colorCinzaMedio"
         android:layout_marginRight="@dimen/dimen_twenty"
         android:contentDescription="@string/description_user"/>
     <ImageButton
         android:id="@+id/search_bar"
         android:layout_width="@dimen/dimen_twenty"
         android:layout_height="@dimen/dimen_twenty"
         android:src="@drawable/lupa"
         android:layout_gravity="right"
         android:scaleType="centerInside"
         android:background="@color/colorCinzaMedio"
         android:layout_marginRight="@dimen/dimen_twenty"
         android:contentDescription="@string/description_search"/>
     <ImageButton
         android:id="@+id/notification"
         android:layout_width="@dimen/dimen_twenty"
         android:layout_height="@dimen/dimen_twenty"
         android:src="@drawable/notificacao"
         android:layout_gravity="right"
         android:scaleType="centerInside"
         android:background="@color/colorCinzaMedio"
         android:layout_marginRight="@dimen/dimen_twenty"
         android:contentDescription="@string/description_notification"/>
     <ImageButton
         android:id="@+id/sharedStream"
         android:layout_width="@dimen/dimen_twenty"
         android:layout_height="@dimen/dimen_twenty"
         android:src="@drawable/stream"
         android:scaleType="centerInside"
         android:background="@color/colorCinzaMedio"
         android:layout_gravity="right"
         android:layout_marginRight="@dimen/dimen_twenty"
         android:contentDescription="@string/description_sharedStream"/>

</Toolbar>
</FrameLayout>