<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_twenty"
    app:cardCornerRadius="@dimen/dimen_twenty"
    app:cardElevation="6dp">
    <LinearLayout
        android:id="@+id/cv_scheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"

        >

        <View
            android:id="@+id/divider"
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_thirty"
            android:background="?android:attr/listDivider"
            android:outlineAmbientShadowColor="@color/colorPrimary" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingBottom="@dimen/dimen_twenty">
          <ImageView
              android:layout_width="20dp"
              android:layout_height="20dp"
              android:src="@drawable/ic_access_time"
              android:layout_marginRight="@dimen/dimen_fourteen"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/dimen_fourteen"
              android:text="@string/bootomsheet_save"/>
      </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_twenty">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_outline_library_add"
                android:layout_marginRight="@dimen/dimen_fourteen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_fourteen"
                android:text="@string/bootomsheet_save_playlist"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_twenty">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_share"
                android:layout_marginRight="@dimen/dimen_fourteen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_fourteen"
                android:text="@string/bootomsheet_shared"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_twenty">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_do_not"
                android:layout_marginRight="@dimen/dimen_fourteen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_fourteen"
                android:text="@string/bootomsheet_not_interested"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_twenty">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_do_not"
                android:layout_marginRight="@dimen/dimen_fourteen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_fourteen"
                android:text="@string/bootomsheet_dont_recommend_channel"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_twenty">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_outline_report"
                android:layout_marginRight="@dimen/dimen_fourteen"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_fourteen"
                android:text="@string/bootomsheet_report"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>